# autoware.universe

./: .pre-commit-config.yaml
common/tier4_state_rviz_plugin/: package.xml
common/tier4_state_rviz_plugin/src/: autoware_state_panel.cpp  autoware_state_panel.hpp
common/tier4_vehicle_rviz_plugin/: CMakeLists.txt  package.xml
common/tier4_vehicle_rviz_plugin/plugins/: plugin_description.xml
control/joy_controller/launch/: joy_controller.launch.xml
control/obstacle_collision_checker/: package.xml
control/predicted_path_checker/: CMakeLists.txt  README.md  package.xml
control/predicted_path_checker/config/: predicted_path_checker.param.yaml
control/predicted_path_checker/include/predicted_path_checker/: collision_checker.hpp  debug_marker.hpp  predicted_path_checker_node.hpp  utils.hpp
control/predicted_path_checker/launch/: predicted_path_checker.launch.xml
control/predicted_path_checker/src/predicted_path_checker_node/: collision_checker.cpp  debug_marker.cpp  predicted_path_checker_node.cpp  utils.cpp
control/pure_pursuit/config/: pure_pursuit.param.yaml
control/trajectory_follower_nodes/config/: vels.xml
control/vehicle_cmd_gate/config/: vehicle_cmd_gate.param.yaml
control/vehicle_cmd_gate/launch/: vehicle_cmd_gate.launch.xml
control/vehicle_cmd_gate/src/: vehicle_cmd_gate.cpp
latest/: sitemap.xml
latest/common/autoware_ad_api_msgs/: index.html
latest/control/obstacle_collision_checker/: index.html
latest/control/shift_decider/: index.html
main/: sitemap.xml
perception/traffic_light_classifier/: CMakeLists.txt
planning/motion_velocity_smoother/: package.xml
sensing/transformation_origin_calibration/: CMakeLists.txt  package.xml
sensing/transformation_origin_calibration/config/: transformation_origin_calib.param.yaml
sensing/transformation_origin_calibration/include/transformation_origin_calibration/: transformation_origin_calibration_core.hpp
sensing/transformation_origin_calibration/launch/: transformation_origin_calibration.launch.xml
sensing/transformation_origin_calibration/src/: transformation_origin_calibration_core.cpp
(+195 files in other folders)
